2007-10-03  Marek Habersack  <mhabersack@novell.com>

	* man/mod_mono.8.in: removed documentation of the recently added
	MonoFlushOnWrite directive. It is replaced by the new protocol
	command described below.

	* src/mod_mono.h: added the PROTOCOL_VERSION define (and bumped
	the protocol value to 8, as a new command has been added).
	Defined a new command, SET_CONFIGURATION, which is used to
	configure mod_mono/apache from within the Mono ASP.NET runtime
	(currently only HttpResponse.BufferOutput is sent)

	* src/mod_mono.c: implemented new command, SET_CONFIGURATION.
	Use PROTOCOL_VERSION macro when necessary instead of using the
	literal integer value.
	Removed the recently added MonoFlushOnWrite directive.

2007-10-02  Marek Habersack  <grendello@gmail.com>

	* man/mod_mono.8.in: added more info for  the MonoFlushOnWrite
	directive.

2007-10-01  Marek Habersack  <mhabersack@novell.com>

	* src/mod_mono.c: implemented support for flushing the Apache
	output buffers on every write, configurable via the
	MonoFlushOnWrite directive.

	* man/mod_mono.8.in: added documentation of the MonoFlushOnWrite
	directive.

2007-09-27  Marek Habersack  <mhabersack@novell.com>

	* man/mod_mono.8.in: document the restart options as Apache 2.0+
	only.

	* src/mod_mono.h: move all apr includes to the APACHE2-only
	section.

	* src/mod_mono.c: disable dashboard (and restart) for Apache 1.3 -
	the support requires apr, which cannot be used in 1.3 modules (as
	far as I know). Module compiles fine with Apache 1.3 now

2007-09-26  Marek Habersack  <mhabersack@novell.com>

	* src/mod_mono.c: added three wrapper functions to get the apache
	configured user id, group id and user name.
	(ensure_dashboard_initialized): attempt to remove the dashboard
	file (if dashboard hasn't been created yet) as root, not as the
	target user.

	* src/mod_mono.h: unixd.h is not found in APACHE 1.3

2007-09-16  Joshua Tauberer  <jit@occams.info>
